[MRG] Fix contrast ratios in sphinx docs (#37)
* .css updates

* Remove note and update some comment

* Force more text to black

--- a/docs/_static/css/hypertext_links.css
+++ b/docs/_static/css/hypertext_links.css
@@ -17,3 +17,16 @@ li.wy-breadcrumbs-aside a{
 li.wy-breadcrumbs-aside a:visited{
     color: #000000;
 }
+
+/* Foot updates to black */
+footer {
+    color: #000000;
+}
+
+footer a{
+    color: #000000;
+}
+
+footer a:visited{
+    color: #000000;
+}
